--- a/app/views/forms/housing/CBLaddress1.html
+++ b/app/views/forms/housing/CBLaddress1.html
@@ -45,7 +45,7 @@
           name: "add-address2",
           fieldset: {
             legend: {
-              text: "Do you need to add another address?",
+              text: "Do you need to add another past address?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
