--- a/app/views/forms/housing/CBLareas.html
+++ b/app/views/forms/housing/CBLareas.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing<span class="UR-tag amber">amber</span> <span class="UR-tag ok">ok</span>
+            Apply online for council housing<span class="UR-tag ok">WILL HAVE EXTRA GUIDANCE</span>
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <div class="govuk-form-group">
@@ -194,13 +194,19 @@
 
     </div>
 </div>
+<div class="UR-notes-box">
+    <h3 class="govuk-heading-s">UR notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+    <li>We will add a bit of guidance at the top to explain that this will not affect the possibility to bid in areas they didn't select</li>
+    </ul>
+</div>
 <div class="IT-notes-box">
-        <h3 class="govuk-heading-s">IT notes:</h3>
-        <ul class="govuk-list govuk-list--bullet">
-        <li>can be coded - Giffnock has been added. It was missing from the form and also 3 checkboxes for Neilston</li>
-        <li>Select at least one</li>
-        </ul>
-    </div>
+    <h3 class="govuk-heading-s">IT notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+    <li>can be coded - Giffnock has been added. It was missing from the form and also 3 checkboxes for Neilston</li>
+    <li>Select at least one</li>
+    </ul>
+</div>
 
 
 {% endblock %}
