--- a/app/views/forms/housing/CBLbedroom.html
+++ b/app/views/forms/housing/CBLbedroom.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          Apply online for council housing<span class="UR-tag red">red</span>
+          Apply online for council housing<span class="UR-tag red">WILL CHANGE</span>
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <h2 class="govuk-heading-m">
@@ -207,7 +207,7 @@
 
       {{ govukButton({
         text: "Continue",
-        href: "/forms/housing/CBL5yearsadd.html",
+        href: "/forms/housing/CBLreasons.html",
         classes: "button-primary"
       }) }}
 
@@ -217,6 +217,10 @@
 <div class="content-notes-box">
     <h3 class="govuk-heading-s">Content notes:</h3>
    <p>content need to be reviewed by both Housing and Sharon</p> 
+</div>
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+   <p>This screen was routing to the 5 years of addresses previously, but this screen has moved to earlier in the form</p> 
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
