--- a/app/views/forms/housing/CBLconfirmation.html
+++ b/app/views/forms/housing/CBLconfirmation.html
@@ -11,7 +11,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag amber">amber</span>
+            Apply online for council housing <span class="UR-tag amber">CHANGED</span>
         </h1>
 
         <div class="govuk-panel govuk-panel--confirmation">
@@ -28,18 +28,19 @@
           </div>
           <p>Thank you for submitting your housing registration form.</p>
 
-          <div class="govuk-warning-text govuk-!-margin-bottom-9">
-                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-                <strong class="govuk-warning-text__text">
-                  <span class="govuk-warning-text__assistive">Warning</span>
-                  <a href="{{ asset_path }}images/application-info.pdf" download="housing-application.pdf">Download the summary of your application</a>
-                </strong>
-              </div>
+          <div class="govuk-warning-text govuk-!-margin-bottom-5">
+              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+              <strong class="govuk-warning-text__text">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                <a href="{{ asset_path }}images/application-info.pdf" download="housing-application.pdf">Download the summary of your application</a>
+              </strong>
+            </div>
+          <p class="govuk-!-margin-bottom-9">Could you complete our <a href="/forms/equal-opportunities/start.html">Equality and diversity questionnaire</a>? (takes less than 1 minute)</p>
+          
+          <h3 class="govuk-heading-m">What happens next</a></h3> 
+          <p>high level points will be drafted here?</p>
 
-          <h3 class="govuk-heading-m"><a href="/forms/housing/CBLwhat-next.html">What happens next</a></h3> 
-
-          <p>Could you complete our <a href="/forms/equal-opportunities/ethnic-origin.html">Equality and diversity questionnaire</a>? (optional)</p>
-
+        
         <p class="govuk-!-margin-bottom-1">&nbsp;</p>
           <h2 class="govuk-heading-m">Contact</h2>
           <ul class="govuk-list">
