--- a/app/views/forms/housing/CBLdeclaration2.html
+++ b/app/views/forms/housing/CBLdeclaration2.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag red">red</span>
+            Apply online for council housing <span class="UR-tag red">MOVED TO THE START</span>
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <h2 class="govuk-heading-m">
@@ -61,10 +61,15 @@
 <div class="content-notes-box">
     <h3 class="govuk-heading-s">Content notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li><strong>this content was not seen by Sharon - there is too much </strong></li>
-        <li>people won't read it especially considering how long this form takes to fill in</li>
-        <li>need the link to the privacy policy?</li>
+        <li><strong>this content was not seen by Sharon - there is too much  - but tested ok</strong></li>
     </ul>
 </div>
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+        <li><strong>Screen moved at the start to avoid loosing too much progress if they click on the link to view the GDPR</strong></li>
+    </ul>
+</div>
+    
 
 {% endblock %}
