--- a/app/views/forms/housing/CBLextra-reason-medical.html
+++ b/app/views/forms/housing/CBLextra-reason-medical.html
@@ -73,5 +73,8 @@ Health, care, social and support needs
 
     </div>
 </div>
-
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+    <p><strong>we will need a bit of guidance if they say no to medical priority</strong></p>
+</div>
 {% endblock %}
