--- a/app/views/forms/housing/CBLjoint.html
+++ b/app/views/forms/housing/CBLjoint.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing<span class="UR-tag amber">amber</span>
+        Apply online for council housing<span class="UR-tag amber">CHANGED</span>
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <form class="form" method="post">
@@ -40,7 +40,7 @@
     }
   },
   hint: {
-    text: "There cannot be more than one. The joint applicant must be 16 or over"
+    text: "The joint applicant must be 16 or over."
   },
   items: [
     {
@@ -66,9 +66,9 @@
     </form>
     </div>
 </div>
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-   <p>The wording is from Sharon - pattern agreed by Housing</p>
+<div class="UR-notes-box">
+    <h3 class="govuk-heading-s">UR notes:</h3>
+   <p>In some very rare cases, there can be more than one joint applicant on the lease. Most of the time, it's added after the start of the lease. We would catch this as there would be more than one name in the box. We would not ask for extra 5 years of addresses for a 3rd applicant</p>
 </div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
