--- a/app/views/forms/housing/CBL5yearsadd.html
+++ b/app/views/forms/housing/CBL5yearsadd.html
@@ -8,10 +8,10 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag red">red</span>
+            Apply online for council housing <span class="UR-tag red">WILL CHANGE - SCREEN MOVED EARLIER</span>
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
-        <p class="govuk-body-l">Enter the addresses you lived at for the last 5 years. Start with the one you are living in at the moment.</p>
+        <p class="govuk-body-l">Enter the addresses you lived at for the last 5 years.</p>
         <h2 class="govuk-heading-m">
             Address 1:
         </h2>
@@ -21,7 +21,7 @@
         {% from "input/macro.njk" import govukInput %}
         {{ govukInput({
           label: {
-            text: "Address"
+            text: "Address, including postcode"
           },
           id: "addr1",
           name: "addr1",
