--- a/app/views/forms/housing/CBLconfirmation-email.html
+++ b/app/views/forms/housing/CBLconfirmation-email.html
@@ -32,9 +32,12 @@
                 </strong>
               </div>
 
-          <h3 class="govuk-heading-m"><a href="/forms/housing/CBLwhat-next.html">What happens next</a></h3> 
-
-          <p>Could you complete our <a href="/forms/equal-opportunities/ethnic-origin.html">Equality and diversity questionnaire</a>? (optional)</p>
+              <p class="govuk-!-margin-bottom-9">Could you complete our <a href="/forms/equal-opportunities/start.html">Equality and diversity questionnaire</a>? (takes less than 1 minute)</p>
+          
+              <h3 class="govuk-heading-m">What happens next</a></h3> 
+              <p>high level points will be drafted here?</p>
+    
+            
 
         <p class="govuk-!-margin-bottom-1">&nbsp;</p>
           <h2 class="govuk-heading-m">Contact</h2>
