--- a/app/views/forms/housing/CBLend.html
+++ b/app/views/forms/housing/CBLend.html
@@ -1,7 +1,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  warning
+  Last page
 {% endblock %}
 
 {% block content %}
@@ -10,24 +10,27 @@
       <h1 class="govuk-heading-l">
           Apply online for council housing
       </h1>
-      <a class="govuk-back-link" href="javascript: history.go(-1)" style="border-bottom-color: white; padding: 5px 10px; background-color: #ffbf47 ">Back</a>
+      <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       
       <h2 class="govuk-heading-m">
-          Use the back link if you need to go to the previous page
+          Your are about to submit your application
       </h2>
     
+ 
       {% from "warning-text/macro.njk" import govukWarningText %}
 
       {{ govukWarningText({
-        text: "Don't use the back button of your browser or device or you'll need to start again.",
+        html: "We will NOT send you a summary by letter or email. ",
         iconFallbackText: "Warning"
       }) }}
 
+     <p class="govuk-!-font-weight-bold govuk-!-margin-bottom-9 govuk-!-margin-top-9">On the next page you can download your application summary and save it for future reference.</p>
+   
 
       {% from "button/macro.njk" import govukButton %}
       {{ govukButton({
-        text: "Continue",
-        href: "/forms/housing/CBLdeclaration2.html",
+        text: "Submit your application",
+        href: "/forms/housing/CBLconfirmation.html",
         classes: "button-primary"
       }) }}
 <br>
@@ -40,7 +43,7 @@
 <div class="design-notes-box">
   <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li><strong>NEW SCREEN</strong> possible design to try highlight the back button problem</li>
+      <li><strong>NEW SCREEN</strong> possible design to make sure they realise they should download on the next page </li>
     </ul>
 </div>
 
