--- a/app/views/forms/housing/CBLgender.html
+++ b/app/views/forms/housing/CBLgender.html
@@ -71,11 +71,9 @@
     </form>
     </div>
 </div>
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>To capture the gender of the applicant - Agreed by Housing but we change the wording and might change again - further discussion this week</li>
-      <li>prepares the user to enter it that way for the other members of the household?</li>
       <li>Text to describe gender is not mandatory - in summary on further screens we will display the description if provided, or just display "Other" if not</li>
       <li>Validation: none on the description - if no selection: Enter gender (?)</li>
     </ul>
