--- a/app/views/forms/housing/CBLstart.html
+++ b/app/views/forms/housing/CBLstart.html
@@ -14,18 +14,11 @@
       </h1>
       <p><img src="{{ asset_path }}images/housing-logo.PNG" alt="Housing logo" style="height:95px; width:250px"></p>
 
-      {% from "warning-text/macro.njk" import govukWarningText %}
-
-      {{ govukWarningText({
-        text: "Use the back link if you need to go to the previous page. Don't use the back button of your browser or device or you'll need to start again.",
-        iconFallbackText: "Warning"
-      }) }}
-
 
       <h2 class="govuk-heading-m erc-text-blue">Before you start</h2>
       <p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>this form takes most people around 30 minutes to 1 hour to complete</li>
+            <li>this form takes most people around 20 to 30 minutes to complete</li>
             <li>you cannot save the form and go back to it</li>
             <li>you need addresses for the last 5 years for you and for your joint applicant if you have one</li>
             <li>you need your National Insurance number if you have one</li>
@@ -35,7 +28,7 @@
       {% from "button/macro.njk" import govukButton %}
       {{ govukButton({
         text: "Start now",
-        href: "/forms/housing/CBL16.html",
+        href: "/forms/housing/CBLstart-warning.html",
         classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
       }) }}
  
@@ -61,14 +54,15 @@
       </p>
     </div>
 </div>
-<div class="alt-notes-box">
-    <p><a href="/forms/housing/CBLstart-warning">see with warning</a></p>
+<div class="UR-notes-box">
+    <h3 class="govuk-heading-s">UR notes: (changes from usability testing on the 10/12) </h3>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>no one was seeing the warning about back page, so now is a page on it's on after selecting "start now:"</li>
+      </ul>
   </div>
 <div class="design-notes-box">
   <h3 class="govuk-heading-s">Design notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
-    <li>message for homeless applicants? - related link might be enough</li>
-    <li>if NI is used, do we mention it in the list of things to have at hands before starting the form? - it's early in the form...could be ok</li>
     <li>original form: <a href="https://www.eastrenfrewshire.gov.uk/CHttpHandler.ashx?id=13165&p=0" target="_blank">https://www.eastrenfrewshire.gov.uk/CHttpHandler.ashx?id=13165&p=0</a></li>
   </ul>
 </div>
