--- a/app/views/forms/housing/CBLsummary-aboutyou.html
+++ b/app/views/forms/housing/CBLsummary-aboutyou.html
@@ -23,15 +23,13 @@
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Name:</th><td class="govuk-table__cell no-border">{{data['title-applicant']}}&nbsp;{{ data['first-name-applicant']}}&nbsp;{{data['last-name-applicant']}}</td></tr>
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Phone:</th><td class="govuk-table__cell no-border">{{ data ['telephone-number']}}</td></tr>
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Email (optional):</th><td class="govuk-table__cell no-border">{{data['email']}}</td></tr>
-                <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Address:</th><td class="govuk-table__cell no-border">
-                    {% if data['has-add'] === 'yes' %}
-                    {{ data['postcode']}}
-                    {% else %}
-                    I'm homeless
-                    {% endif %}</td></tr>
+                <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Address:</th><td class="govuk-table__cell no-border">{{ data['postcode']}}</td></tr>
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Preferred contact:</th><td class="govuk-table__cell no-border">{{ data['how-contacted']}}</td></tr>
                 {% if data['how-contacted'] === 'I have an advocate or power of attorney' %}
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Advocate or power of attorney:</th><td class="govuk-table__cell no-border">{{ data['contact-att']}}</td></tr>
+                {% endif %}
+                {% if data['how-contacted'] === 'Post at a different address' %}
+                <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Other address:</th><td class="govuk-table__cell no-border">{{ data['other-add']}}</td></tr>
                 {% endif %}
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Date of birth:</th><td class="ngovuk-table__cell o-border">{{ data['dob-applicant-day'] }}/{{ data ['dob-applicant-month'] }}/{{ data['dob-applicant-year'] }}</td></tr>
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Gender:</th><td class="govuk-table__cell no-border">{% if data['gender-applicant'] === 'Other' %} {{data['gender-desc']}} {% else %} {{data['gender-applicant']}} {% endif %}</td></tr>
